Create Button Back Top

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsam aliquid ex nemo error magnam corrupti porro? Pariatur iure iusto ea dicta aperiam consectetur quas soluta, natus, blanditiis velit repellat.
         </p>
     </a>
+
+    <a href="#" class="btn"></a>
+
 </nav>   
+
     
 </body>
 </html>
